# QtAudioCapture

./: CMakeLists.txt
cmake/: QtAudioCaptureConfig.cmake.in
include/QtAudioCapture/: AudioFileDecoder.h  AudioPipeline.h  AudioRecorder.h  AudioResampler.h  Types.h
src/: AudioFileDecoder.cpp  AudioPipeline.cpp  AudioRecorder.cpp  AudioResampler.cpp
